// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`box can be extended 1`] = `
.c1 {
  box-sizing: border-box;
  width: 100%;
  margin: 8px;
  padding-left: 8px;
  padding-right: 8px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c0 {
  background-color: blue;
}

@media screen and (min-width:40em) {
  .c1 {
    margin: 16px;
    padding-left: 16px;
    padding-right: 16px;
  }
}

<Styled(Box)
  flex="1 1 auto"
  isActive={true}
  m={
    Array [
      1,
      2,
    ]
  }
  px={
    Array [
      1,
      2,
    ]
  }
  w={1}
>
  <Box
    className="c0"
    flex="1 1 auto"
    is="div"
    isActive={true}
    m={
      Array [
        1,
        2,
      ]
    }
    px={
      Array [
        1,
        2,
      ]
    }
    w={1}
  >
    <styled.div
      className="c0"
      flex="1 1 auto"
      isActive={true}
      m={
        Array [
          1,
          2,
        ]
      }
      px={
        Array [
          1,
          2,
        ]
      }
      w={1}
    >
      <div
        className="c0 c1"
      />
    </styled.div>
  </Box>
</Styled(Box)>
`;

exports[`box can use a different component with the "is" prop 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 16px;
  padding-left: 32px;
  padding-right: 32px;
}

<Box
  is="section"
  m={2}
  px={3}
>
  <styled.section
    m={2}
    px={3}
  >
    <section
      className="c0"
    >
      Test
    </section>
  </styled.section>
</Box>
`;

exports[`box renders 1`] = `
<styled.div
  m={2}
  px={3}
/>
`;

exports[`box renders with props 1`] = `
.c0 {
  box-sizing: border-box;
  width: 100%;
  margin: 8px;
  padding-left: 8px;
  padding-right: 8px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

@media screen and (min-width:40em) {
  .c0 {
    margin: 16px;
    padding-left: 16px;
    padding-right: 16px;
  }
}

<Box
  flex="1 1 auto"
  is="div"
  m={
    Array [
      1,
      2,
    ]
  }
  px={
    Array [
      1,
      2,
    ]
  }
  w={1}
>
  <styled.div
    flex="1 1 auto"
    m={
      Array [
        1,
        2,
      ]
    }
    px={
      Array [
        1,
        2,
      ]
    }
    w={1}
  >
    <div
      className="c0"
    />
  </styled.div>
</Box>
`;
